拆分控制台出去；为了seo使用预渲染；所有页面加上标题；图片统一改成使用移动app作为demo；改名手机账号；精简页面内容 减少margin使其更紧凑；其他小改动

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,46 +1,10 @@
 body {
   font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
   margin: 0;
-  font-size: 14px;
+  font-size: 15px;
   -webkit-text-size-adjust: none;
   color: #303133;
   line-height: 1.5;
-}
-
-/* font start */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'),
-  local('MaterialIcons-Regular'),
-  url(./MaterialIcons-Regular.woff2) format('woff2'),
-  url(./MaterialIcons-Regular.woff) format('woff'),
-  url(./MaterialIcons-Regular.ttf) format('truetype');
-}
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 48px;
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
 }
 @font-face {
   font-family: 'iconfont';  /* project id 545468 */
@@ -58,8 +22,6 @@ body {
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-/* font end */
-
 .gradient-hr {
   background:linear-gradient( to right, rgba(220,220,220,0) 0%, rgba(220,220,220,1) 10%, rgba(220,220,220,1) 90%, rgba(220,220,220,0) 100% );
   height:1px;
@@ -84,9 +46,9 @@ body {
   height:1px;
   width:100%
 }
-#banner1 {
+#banner {
   margin: 0;
-  padding: 50px 0;
+  padding: 40px 0;
   background-color: #3b5898;
   background-image: url("./mask.png");
   background-size: cover;
@@ -95,7 +57,7 @@ body {
   font-size: 30px;
 }
 .section {
-  margin: 50px auto;
+  margin: 40px auto;
   width: 980px;
 }
 .section+.gradient-hr {
@@ -108,6 +70,7 @@ body {
   margin: 0;
 }
 .section-summary {
+  margin-top: 0.8em;
   text-align: center;
   font-size: 17px;
   color: #7f7f7f;
@@ -128,11 +91,12 @@ body {
   color: #7f7f7f;
   font-size: 14px
 }
-/* 引用程序代码的样式 */
+/* 程序代码 */
 pre {
   padding: 20px;
   background-color: #f7f8f9;
+  font-size: 14px;
 }
-.el-form-item__error {
-  font-size: 13px;
+.el-button {
+  font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
 }
