--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -23,7 +23,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 .gradient-hr {
-  background:linear-gradient( to right, rgba(220,220,220,0) 0%, rgba(220,220,220,1) 10%, rgba(220,220,220,1) 90%, rgba(220,220,220,0) 100% );
+  background:linear-gradient( to right, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 10%, rgba(230,230,230,1) 90%, rgba(230,230,230,0) 100% );
   height:1px;
 }
 .gradient-hr-title {
@@ -42,7 +42,7 @@ body {
   content: '';
   top: 50%;
   position: absolute;
-  background:linear-gradient( to right, rgba(220,220,220,0) 0%, rgba(220,220,220,1) 10%, rgba(220,220,220,1) 90%, rgba(220,220,220,0) 100% );
+  background:linear-gradient( to right, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 10%, rgba(230,230,230,1) 90%, rgba(230,230,230,0) 100% );
   height:1px;
   width:100%
 }
@@ -66,13 +66,13 @@ body {
 }
 .section-title {
   text-align: center;
-  font-size: 28px;
+  font-size: 27px;
   margin: 0;
 }
 .section-summary {
   margin-top: 0.8em;
   text-align: center;
-  font-size: 17px;
+  font-size: 16px;
   color: #7f7f7f;
 }
 .section-bg-dark {
@@ -99,4 +99,9 @@ pre {
 }
 .el-button {
   font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
+}
+.el-tooltip__popper.back-top {
+  border: none;
+  box-shadow: 0 0 6px rgba(0,0,0,.12);
+  font-size: 13px;
 }
