--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -102,6 +102,8 @@ pre {
 }
 .el-tooltip__popper.back-top {
   border: none;
-  box-shadow: 0 0 6px rgba(0,0,0,.12);
+  box-shadow: 0 0 6px rgba(0,0,0,.1);
   font-size: 13px;
+  background-color: rgba(255,255,255,.8);
+  color: #606266;
 }
