--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,57 +1,41 @@
 body {
-  font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
+  font-family: PingFangSC, 'Microsoft YaHei', sans-serif;
   margin: 0;
   font-size: 15px;
-  -webkit-text-size-adjust: none;
   color: #303133;
-  line-height: 1.5;
 }
 @font-face {
-  font-family: 'iconfont';  /* project id 545468 */
-  src: url('//at.alicdn.com/t/font_545468_mjh3lqdprx.eot');
-  src: url('//at.alicdn.com/t/font_545468_mjh3lqdprx.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_545468_mjh3lqdprx.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_545468_mjh3lqdprx.woff') format('woff'),
-  url('//at.alicdn.com/t/font_545468_mjh3lqdprx.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_545468_mjh3lqdprx.svg#iconfont') format('svg');
+  font-family: 'iconfont'; /* project id 545468 */
+  src: url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.eot');
+  src: url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.woff2') format('woff2'),
+    url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.woff') format('woff'),
+    url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_545468_6jrq6nkcqar.svg#iconfont') format('svg');
 }
-.iconfont{
-  font-family:"iconfont";
-  font-size:24px;
-  font-style:normal;
+.iconfont {
+  font-family: 'iconfont';
+  font-size: 24px;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
 .gradient-hr {
-  background:linear-gradient( to right, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 10%, rgba(230,230,230,1) 90%, rgba(230,230,230,0) 100% );
-  height:1px;
+  background: linear-gradient(
+    to right,
+    rgba(230, 230, 230, 0) 0%,
+    rgba(230, 230, 230, 1) 10%,
+    rgba(230, 230, 230, 1) 90%,
+    rgba(230, 230, 230, 0) 100%
+  );
+  height: 1px;
 }
-.gradient-hr-title {
-  position: relative;
-  text-align: center;
-}
-.gradient-hr-title span {
-  display: inline-block;
-  position: relative;
-  background: white;
-  padding: 0 10px;
-  z-index: 1;
-}
-.gradient-hr-title::after {
-  display: block;
-  content: '';
-  top: 50%;
-  position: absolute;
-  background:linear-gradient( to right, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 10%, rgba(230,230,230,1) 90%, rgba(230,230,230,0) 100% );
-  height:1px;
-  width:100%
-}
-#banner {
+.g-banner {
   margin: 0;
   padding: 40px 0;
   background-color: #3b5898;
-  background-image: url("./mask.png");
+  background-image: url('./mask.png');
   background-size: cover;
   color: white;
   text-align: center;
@@ -63,7 +47,7 @@ body {
   box-sizing: border-box;
   padding: 0 20px;
 }
-.section+.gradient-hr {
+.section + .gradient-hr {
   width: 1160px;
   margin: 0 auto;
 }
@@ -84,15 +68,15 @@ body {
   padding: 1px;
 }
 .section-bg-dark .section-summary {
-  color: #E6A23C;
+  color: #e6a23c;
 }
 .section-bg-gradient {
   padding: 1px;
-  background: linear-gradient(180deg,#F6F9FC 0,rgba(255,255,255,0) 100%);
+  background: linear-gradient(180deg, #f6f9fc 0, rgba(255, 255, 255, 0) 100%);
 }
 .note {
   color: #7f7f7f;
-  font-size: 14px
+  font-size: 14px;
 }
 /* 程序代码 */
 pre {
@@ -101,13 +85,13 @@ pre {
   font-size: 14px;
 }
 .el-button {
-  font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
+  font-family: PingFangSC, 'Microsoft YaHei', sans-serif;
 }
 .el-tooltip__popper.back-top {
   border: none;
-  box-shadow: 0 0 6px rgba(0,0,0,.1);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
   font-size: 13px;
-  background-color: rgba(255,255,255,.8);
+  background-color: rgba(255, 255, 255, 0.8);
   color: #606266;
 }
 .clear-fix::after {
