--- a/src/pages/Index/Banner.module.css
+++ b/src/pages/Index/Banner.module.css
@@ -16,14 +16,7 @@
 }
 
 .item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
     height: 28rem;
-    max-width: 1200px;
-    padding: 0 4rem;
-    margin: 0 auto;
 }
 
 .indicators {
@@ -40,12 +33,12 @@
     padding: 0.5rem 0;
 }
 
-.indicatorBox.active {
-    opacity: 1;
-}
-
 .indicatorBox:hover {
     opacity: 0.7;
+}
+
+.indicatorBox.active {
+    opacity: 1;
 }
 
 .indicator {
@@ -62,7 +55,7 @@
 }
 
 .itemBox1 .title {
-    font-size: 3rem;
+    font-size: 48px;
     margin-top: 0;
 }
 
@@ -82,29 +75,33 @@
     background-size: cover;
 }
 
-.itemBox2 .title {
+.itemBox3 {
+    background-image: url("../../assets/banner3-bg.jpg");
+    background-size: cover;
+    background-position: center 100%;
+}
+
+.itemBox2 .title,
+.itemBox3 .title {
     font-size: 2.7rem;
     margin-top: 0;
 }
 
-.itemBox2 .detail {
+.itemBox2 .detail,
+.itemBox3 .detail {
     padding: 0;
     margin: 0;
     list-style: none;
     font-size: 1.4rem;
 }
 
-.itemBox2 .detail li {
+.itemBox2 .detail li,
+.itemBox3 .detail li {
     line-height: 3.5em;
 }
 
 .buttonBox {
     margin-right: 1rem;
-}
-
-.button {
-    font-size: 1.1rem;
-    border-radius: 2rem;
 }
 
 .icon {
@@ -116,4 +113,61 @@
 .githubIcon {
     font-size: 1.7rem;
     margin-right: 1rem;
+}
+
+@media (min-width: 600px) {
+    .root {
+        min-width: 1200px;
+    }
+
+    .banner {
+        min-width: 1200px;
+    }
+
+    .itemBox {
+        min-width: 1200px;
+    }
+
+    .item {
+        width: 1200px;
+        padding: 0 40px;
+        margin: 0 auto;
+    }
+
+    .button {
+        font-size: 1.1rem;
+        border-radius: 2rem;
+    }
+}
+
+@media (max-width: 599px) {
+    .item {
+        padding: 1rem;
+    }
+
+    .itemBox1 .title {
+        font-size: 2.4rem;
+    }
+
+    .itemBox1 .detail {
+        font-size: 1.2rem;
+    }
+
+    .itemBox2 .title,
+    .itemBox3 .title {
+        font-size: 1.9rem;
+    }
+
+    .itemBox2 .detail,
+    .itemBox3 .detail {
+        font-size: 1rem;
+    }
+
+    .icon {
+        font-size: 1.4rem;
+    }
+
+    .githubIcon {
+        font-size: 1.2rem;
+    }
 }
