--- a/src/pages/Index/index.module.css
+++ b/src/pages/Index/index.module.css
@@ -1,3 +1,17 @@
+.sectionBg {
+    background: linear-gradient(180deg, #f6f9fc 0, rgba(255, 255, 255, 0) 100%);
+}
+
+.section {
+    margin: 2rem auto;
+}
+
+.title {
+    font-size: 2rem;
+    margin: 0;
+    text-align: center;
+}
+
 .missionBox {
     text-align: center;
     background-color: #4b5056;
@@ -17,7 +31,22 @@
 }
 
 @media (max-width: 599px) {
+    .title {
+        font-size: 1.6rem;
+    }
+
     .hr1 {
         width: 20rem;
+    }
+
+    .missionBox p {
+        font-size: 1.15rem;
+    }
+}
+
+@media (min-width: 600px) {
+    .section {
+        width: 1200px;
+        padding: 1rem;
     }
 }
