--- a/src/pages/Index/index.module.css
+++ b/src/pages/Index/index.module.css
@@ -1,16 +1,72 @@
-.sectionBg {
-    background: linear-gradient(180deg, #f6f9fc 0, rgba(255, 255, 255, 0) 100%);
+.tab {
+    font-size: 1.2rem;
 }
 
-.section {
-    margin: 2rem auto;
+.img1 {
+    width: 100%;
+    border-radius: 0.4rem;
 }
 
-.title {
-    font-size: 2rem;
+.ul1 {
+    list-style: none;
     margin: 0;
-    text-align: center;
+    padding: 0;
 }
+
+.ul1 li {
+    font-size: 1rem;
+}
+
+.ul1 li :global .MuiSvgIcon-root {
+    vertical-align: -15%;
+    margin-right: 0.5rem;
+}
+
+.ul1 li:not(:last-of-type) {
+    margin-bottom: 1.5rem;
+}
+
+.dissatisfied {
+    color: #f5222d;
+}
+
+.satisfied {
+    color: #52c41a;
+}
+
+.pre1 {
+    height: 13.5rem;
+}
+
+/*.loginDemo {*/
+/*    text-align: center;*/
+/*    position: absolute;*/
+/*    top: 5rem;*/
+/*    left: calc(50% - 6rem);*/
+/*}*/
+
+/*.loginDemo :global .MuiSvgIcon-root {*/
+/*    color: #ddd;*/
+/*    font-size: 4rem;*/
+/*}*/
+
+/*.loginDemo .input {*/
+/*    width: 12rem;*/
+/*    background-color: #e8e8e8;*/
+/*    margin: 1rem 0;*/
+/*    padding: 0.5rem 1rem;*/
+/*    color: #7f7f7f;*/
+/*    border-radius: 0.2rem;*/
+/*}*/
+
+/*.loginDemo .button {*/
+/*    width: 12rem;*/
+/*    margin: 1rem 0;*/
+/*    color: white;*/
+/*    background-color: rgba(63, 81, 181, 0.5);*/
+/*    padding: 0.5rem 1rem;*/
+/*    border-radius: 0.2rem;*/
+/*}*/
 
 .missionBox {
     text-align: center;
@@ -26,17 +82,25 @@
 .hr1 {
     color: #7f7f7f;
     border-top: none;
-    width: 1200px;
     margin-top: 2rem;
 }
 
 @media (max-width: 599px) {
-    .title {
-        font-size: 1.6rem;
+    .tab {
+        font-size: 1.1rem;
     }
 
-    .hr1 {
-        width: 20rem;
+    .ul1 li {
+        font-size: 0.95rem;
+        display: flex;
+    }
+
+    .ul1 li:not(:last-of-type) {
+        margin-bottom: 0.7rem;
+    }
+
+    .ul1 :global .MuiSvgIcon-root {
+        font-size: 1.2rem;
     }
 
     .missionBox p {
@@ -45,8 +109,7 @@
 }
 
 @media (min-width: 600px) {
-    .section {
+    .hr1 {
         width: 1200px;
-        padding: 1rem;
     }
 }
