feat: 完成首页Iam介绍

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@ pre .color2 {
     text-align: center;
 }
 
+.border1 {
+    border: 1px solid #e8e8e8;
+}
+
 @media (max-width: 599px) {
     .section-card {
         padding: 1.5rem;
