fix: 修复一个grid组件导致的小bug

--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,10 @@ pre .color2 {
 }
 
 @media (max-width: 599px) {
+    .section {
+        overflow-x: hidden;
+    }
+
     .section-card {
         padding: 1.5rem;
     }
