--- a/src/pages/Pricing/index.module.css
+++ b/src/pages/Pricing/index.module.css
@@ -75,6 +75,11 @@
     font-weight: bold;
 }
 
+.p1 {
+    margin-top: 2rem;
+    padding: 0 1.5rem;
+}
+
 @media (max-width: 599px) {
     .envelop {
         background-size: 4rem;
