--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -61,3 +61,19 @@
 .githubIcon:hover {
     color: white;
 }
+
+.expandIcon {
+    vertical-align: middle;
+    font-size: 1.4rem;
+}
+
+.productMenu :global .MuiListItemIcon-root {
+    min-width: 40px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.productMenu .tip {
+    color: #7f7f7f;
+    padding: 0.5rem 1.1rem;
+    display: inline-block;
+}
