feat: header完成在线体验对话框

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -77,3 +77,32 @@
     padding: 0.5rem 1.1rem;
     display: inline-block;
 }
+
+.dialog1 {
+    padding: 0 1.5rem 1.5rem;
+}
+
+.dialog1 .logo1 {
+    vertical-align: -30%;
+    margin-right: 0.5em;
+    height: 33px;
+}
+
+.dialog1 :global .p2 {
+    line-height: 2em;
+}
+
+.dialog1 .buttonBox {
+    text-align: center;
+}
+
+.closeButton {
+    position: absolute;
+    right: 0.2rem;
+    top: 0.2rem;
+    color: #7f7f7f;
+}
+
+.dialog1 .buttonBox :global .MuiButton-root {
+    animation: breath-animate 3s infinite ease;
+}
