--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #fdfdfd;
+}
+
 @font-face {
     font-family: "iconfont"; /* project id 545468 */
     src: url("//at.alicdn.com/t/font_545468_l0yekts9wjb.eot");
