--- a/src/pages/about/Careers/index.module.css
+++ b/src/pages/about/Careers/index.module.css
@@ -83,6 +83,12 @@
     padding-left: 4rem;
 }
 
+@media (max-width: 599px) {
+    .positionDetail {
+        padding-top: 2rem;
+    }
+}
+
 @media (min-width: 600px) {
     .positionDetail {
         padding-left: 2rem;
