fix: 修复IE兼容性问题

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -54,6 +54,10 @@
     align-items: center;
 }
 
+.headerRight a {
+    text-decoration: none;
+}
+
 .githubIcon {
     cursor: pointer;
     color: #c0c4cc;
