--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -97,6 +97,37 @@
     border: 1px solid #e8e8e8;
 }
 
+.table1 {
+    border-collapse: collapse;
+    margin: 1rem auto;
+    font-size: 1rem;
+}
+
+table .c1 {
+    color: rgba(0, 0, 0, 0.65);
+}
+
+table td {
+    padding: 1rem 2rem;
+}
+
+table tr {
+    border-bottom: 1px solid #e4e7ed;
+}
+
+table tr:hover {
+    background-color: #f7f8f9;
+}
+
+.link1 {
+    margin-left: 1rem;
+}
+
+.link1 :global .MuiSvgIcon-root {
+    font-size: 1rem;
+    vertical-align: text-top;
+}
+
 @media (max-width: 599px) {
     .menu {
         padding-top: 0;
