--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -128,6 +128,10 @@ table tr:hover {
     vertical-align: text-top;
 }
 
+.platformTab :global .MuiTab-root {
+    text-transform: none;
+}
+
 @media (max-width: 599px) {
     .menu {
         padding-top: 0;
