fix: 修复局部的table样式会影响全局的bug

--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -103,19 +103,19 @@
     font-size: 1rem;
 }
 
-table .c1 {
+.table1 .c1 {
     color: rgba(0, 0, 0, 0.65);
 }
 
-table td {
+.table1 td {
     padding: 1rem 2rem;
 }
 
-table tr {
+.table1 tr {
     border-bottom: 1px solid #e4e7ed;
 }
 
-table tr:hover {
+.table1 tr:hover {
     background-color: #f7f8f9;
 }
 
